<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.roasting.RoastingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="80dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/roasting_profile_title"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imagePreview"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:layout_marginTop="56dp"
            android:src="@drawable/image_placeholder" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="10dp"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_camera"
                android:layout_width="160dp"
                android:layout_height="56dp"
                android:layout_marginRight="16dp"
                android:backgroundTint="@color/blue"
                android:text="@string/action_camera"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_gallery"
                android:layout_width="160dp"
                android:layout_height="56dp"
                android:backgroundTint="@color/green"
                android:text="@string/action_gallery"
                android:textColor="@color/white" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_analyze"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/primary"
            android:text="@string/action_analyze"
            android:textColor="@color/white" />
    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:transitionName="bottom_navigation"
        app:itemActiveIndicatorStyle="@color/primary"
        app:menu="@menu/bottom_navigation_menu" />
</LinearLayout>